--- a/analisi stelle.ipynb
+++ b/analisi stelle.ipynb
@@ -641,7 +641,7 @@
    "id": "2046b6fe",
    "metadata": {},
    "source": [
-    "Interessante notare una percentuale di oltre il 40% di stelle giganti, molto più grandi e intrinsecamente luminose rispetto al nostro Sole. Discreta anche la percentuale di stelle supergiganti.\n",
+    "Interessante notare una percentuale di oltre il 40% di stelle giganti, tendenzialmente molto più grandi e intrinsecamente luminose rispetto al nostro Sole. Discreta anche la percentuale di stelle supergiganti.\n",
     "\n",
     "Diamo ora un'occhiata ad alcune statistiche relative alle variabili numeriche."
    ]
