--- a/analisi stelle.ipynb
+++ b/analisi stelle.ipynb
@@ -414,7 +414,7 @@
    "id": "7d371531",
    "metadata": {},
    "source": [
-    "Procediamo con un'analisi delle variabili categoriche più interessanti. Possiamo anzitutto verificare quali delle tradizionali classi spettrali usate in astronomia. Trattandosi nel migliore dei casi di sole 7 unità, possiamo usare la funzione built-in di Python *set()*, che rimuove automaticamente i duplicati, e scorgerle a colpo d'occhio. "
+    "Procediamo con un'analisi delle variabili categoriche più interessanti. Possiamo anzitutto verificare quali delle tradizionali classi spettrali usate in astronomia sono presenti nel dataset. Trattandosi nel migliore dei casi di sole 7 unità, possiamo usare la funzione built-in di Python *set()*, che rimuove automaticamente i duplicati, e scorgerle a colpo d'occhio. "
    ]
   },
   {
