--- a/analisi stelle.ipynb
+++ b/analisi stelle.ipynb
@@ -1804,7 +1804,7 @@
     "\n",
     "il metodo *.corr()* restituisce il coefficiente di correlazione tra tutte le variabili numeriche presenti in un dataframe. Applichiamolo a **Dati** in modo da individuare possibili correlazioni. Come noto, la formula del coefficiente di correlazione (𝜌) è la seguente:\n",
     "\n",
-    "$$ \\rho_{x,y} = \\frac{\\sigma_xy}{\\sigma_x * \\sigma_y} $$"
+    "$$ \\rho_{x,y} = \\frac{\\sigma_xy}{\\sigma_x \cdot \\sigma_y} $$"
    ]
   },
   {
