Update Same birthday problem.ipynb

--- a/Same birthday problem.ipynb
+++ b/Same birthday problem.ipynb
@@ -13,7 +13,7 @@
    "id": "28fb0e50",
    "metadata": {},
    "source": [
-    "**Having a certain number of people, what's the probability that at least 2 of them are born on the same day, considering a year of 365 days? It of course depends on the amount of people! We will try to solve this problem using only Numpy and built-in Python functions.  Let's start.**"
+    "**Having a certain number of people, what's the probability that at least 2 of them are born on the same day, considering a year of 365 days? It of course depends on the amount of people! We will try to solve this problem using only built-in Python functions + Numpy and Matplotlib.  Let's start.**"
    ]
   },
   {
