Update Star clustering with KMeans.ipynb

--- a/Star clustering with KMeans.ipynb
+++ b/Star clustering with KMeans.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "**mag_app**: the apparent magnitude of the star (the smallest the magnitude, the brighter the star). It depends on the distance of the star.\n",
     "\n",
-    "**mag_abs**: the absolute magnitude of the star ((the smallest the magnitude, the brighter the star). It doesn't depend on distance, since it's calculated assuming a default distance of 32,6 light years.\t\n",
+    "**mag_abs**: the absolute magnitude of the star (the smallest the magnitude, the brighter the star). It doesn't depend on distance, since it's calculated assuming a default distance of 32,6 light years.\t\n",
     "\n",
     "**dist**: the distance of the stars in light years.\n",
     "\n",
