Update Star clustering with KMeans.ipynb

--- a/Star clustering with KMeans.ipynb
+++ b/Star clustering with KMeans.ipynb
@@ -420,7 +420,7 @@
    "id": "d6d12fb3",
    "metadata": {},
    "source": [
-    "We will create two empty lists, one for clusters and one for inertia. For each value x from 1 to 10 we will set the KMeans number of clusters to the value, fit the model with abs_magnitude values and calculate inertia. Finally, we will append the value x to the first list and inertia to the second one and plot the results."
+    "We will create two empty lists, one for clusters and one for inertia. For each value x from 1 to 10 we will set the KMeans number of clusters equal to the value, fit the model with abs_magnitude values and calculate inertia. Finally, we will append the value x to the first list and inertia to the second one and plot the results."
    ]
   },
   {
