Update Star clustering with KMeans.ipynb

--- a/Star clustering with KMeans.ipynb
+++ b/Star clustering with KMeans.ipynb
@@ -548,7 +548,7 @@
    "id": "b67527b4",
    "metadata": {},
    "source": [
-    "The 3 clusters can be interpreted as very bright stars (blue), bright stars (red), and not bright stars (black) but the labels are not esplicative. Therefore, we have to assign them meaningfull names. We can do it using the method _.where()_ of Numpy. Then, we can plot again the results, this time using a default color palette called _mako_r_."
+    "The 3 clusters can be interpreted as very bright stars (blue), bright stars (red), and not bright stars (black) but the labels are not esplicative. Therefore, we have to assign them meaningfull names. We can do it by using the Numpy method _.where()_. Then, we can plot again the results, this time using a default color palette called _mako_r_."
    ]
   },
   {
