--- a/analisi stelle.ipynb
+++ b/analisi stelle.ipynb
@@ -5,7 +5,7 @@
    "id": "98186186",
    "metadata": {},
    "source": [
-    "# Analisi delle 91 stelle principali\n",
+    "# Analisi esplorativa delle 91 stelle principali\n",
     "**Il dataset Stelle contiene dati relativi alle 91 stelle principali della volta celeste, recuperati da Wikipedia (https://it.wikipedia.org/wiki/Stelle_pi%C3%B9_brillanti_del_cielo_notturno_osservabile), Astropix.it (http://www.astropix.it/) e dal database astronomico del centro di studi astronomici di Strasburgo SIMBAD (http://simbad.u-strasbg.fr/simbad/) e ordinati all'interno di un file excel. Vogliamo eseguire un'analisi esplorativa atta a individuare la natura dei dati e possibili relazioni tra questi. Utilizzeremo il linguaggio Python e in particolare le librerie Numpy, Pandas, Matplotlib e Seaborn.**"
    ]
   },
