Update Working with MySQL in Python.ipynb

--- a/Working with MySQL in Python.ipynb
+++ b/Working with MySQL in Python.ipynb
@@ -1301,7 +1301,7 @@
     }
    ],
    "source": [
-    "create_df_by_query(\"world\", \"SELECT Name, Region, GovernmentForm FROM country where GovernmentForm like '%Dependent Territory%'\")"
+    "create_df_by_query(\"world\", \"SELECT Name, Region, GovernmentForm FROM country WHERE GovernmentForm LIKE '%Dependent Territory%'\")"
    ]
   }
  ],
