Update Hypothesis Testing on Death Penalty in USA.ipynb

--- a/Hypothesis Testing on Death Penalty in USA.ipynb
+++ b/Hypothesis Testing on Death Penalty in USA.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "#### Does sex affect favouring or not the capital punishment (cappun) in USA?\n",
     "    \n",
-    "   <p> Let's find out by using a sample drawn from GSS (General Social Survey)! <p/>
+    "   <p> Let's find out by using a sample drawn from GSS (General Social Survey)! <p\\>
    ]
   },
   {
