Update Analisi esplorativa stelle principali.ipynb

--- a/Analisi esplorativa stelle principali.ipynb
+++ b/Analisi esplorativa stelle principali.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Analisi esplorativa delle 91 stelle principali\n",
-    "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\"https://upload.wikimedia.org/wikipedia/commons/d/dd/Close-up_of_Sirius.jpg\"></p>\n"
+    "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\"https://upload.wikimedia.org/wikipedia/commons/d/dd/Close-up_of_Sirius.jpg\"></p>\n",
     "**Il dataset Stelle contiene dati relativi alle 91 stelle principali della volta celeste, recuperati da Wikipedia (https://it.wikipedia.org/wiki/Stelle_pi%C3%B9_brillanti_del_cielo_notturno_osservabile), Astropix.it (http://www.astropix.it/) e dal database astronomico del centro di studi astronomici di Strasburgo SIMBAD (http://simbad.u-strasbg.fr/simbad/) e ordinati all'interno di un file excel. Vogliamo eseguire un'analisi esplorativa atta a individuare la natura dei dati e possibili relazioni tra questi. Utilizzeremo il linguaggio Python e in particolare le librerie Numpy, Pandas, Matplotlib e Seaborn.**"
    ]
   },
