--- a/History of Nobel prize winners.ipynb
+++ b/History of Nobel prize winners.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## The most Nobel of Prizes\n",
-    "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\"https://upload.wikimedia.org/wikipedia/commons/9/96/Hertzsprung-Russell_Diagram_-_ESO.png\"></p>\n",
+   "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\"https://assets.datacamp.com/production/project_309/img/Nobel_Prize.png\"></p>\n",
     "<p>The Nobel Prize is perhaps the worlds most well known scientific award. Except for the honor, prestige and substantial prize money the recipient also gets a gold medal showing Alfred Nobel (1833 - 1896) who established the prize. Every year it's given to scientists and scholars in the categories chemistry, literature, physics, physiology or medicine, economics, and peace. The first Nobel Prize was handed out in 1901, and at that time the Prize was very Eurocentric and male-focused, but nowadays it's not biased in any way whatsoever. Surely. Right?</p>\n",
     "<p>Well, we're going to find out! The Nobel Foundation has made a dataset available of all prize winners from the start of the prize, in 1901, to 2016. Let's load it in and take a look.</p>"
    ]
