Update Clustering stars with KMeans.ipynb

--- a/Clustering stars with KMeans.ipynb
+++ b/Clustering stars with KMeans.ipynb
@@ -13,8 +13,8 @@
    "id": "21a0c8ec",
    "metadata": {},
    "source": [
-    "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\https://upload.wikimedia.org/wikipedia/commons/9/96/Hertzsprung-Russell_Diagram_-_ESO.png\"></p>\n",
     "**The closest_stars excel file contains informations about the 212  closest to Earth stars (Sun included). We will cluster them according to their magnitude using KMeans and see if our model is able to identify the corresponding spectral classes.**  "
+   "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\https://upload.wikimedia.org/wikipedia/commons/9/96/Hertzsprung-Russell_Diagram_-_ESO.png\"></p>\n"
    ]
   },
   {
