Update Clustering stars with KMeans.ipynb

--- a/Clustering stars with KMeans.ipynb
+++ b/Clustering stars with KMeans.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Closest stars clustering using KMeans\n",
-    "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\"https://upload.wikimedia.org/wikipedia/commons/9/96/Hertzsprung-Russell_Diagram_-_ESO.png\"></p>\n",
+    "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\"https://upload.wikimedia.org/wikipedia/commons/9/96/Hertzsprung-Russell_Diagram_-_ESO.png\"></p>\n"
    ]
   },
   {
