Update Esempio di data visualization.ipynb

--- a/Esempio di data visualization.ipynb
+++ b/Esempio di data visualization.ipynb
@@ -210,7 +210,7 @@
     "\n",
     "# Scatterplot con alpha tarato\n",
     "ax[1].scatter(data.sqft_living, data.price, alpha=0.01, color=\"black\")\n",
-    "ax[1].set_title(\"Originale + alpha\")\n",
+    "ax[1].set_title(\"Alpha\")\n",
     "ax[1].set_xlabel(\"Area\")\n",
     "ax[1].set_ylabel(\"Prezzo\")\n",
     "\n",
