--- a/SVC.ipynb
+++ b/SVC.ipynb
@@ -85,13 +85,13 @@
     "    model,\n",
     "    X,\n",
     "    response_method=\"predict\",\n",
-    "    cmap=plt.cm.ocean,\n",
+    "    cmap=\"ocean\",\n",
     "    alpha=0.8,\n",
     "    ax=ax[1],\n",
     "    xlabel=iris.feature_names[0],\n",
     "    ylabel=iris.feature_names[1],\n",
     ")\n",
-    "ax[1].scatter(X0, X1, c=y[model.support_], cmap=plt.cm.ocean, s=20, edgecolors=\"k\")\n",
+    "ax[1].scatter(X0, X1, c=y[model.support_], cmap=\"ocean\", s=20, edgecolors=\"k\")\n",
     "ax[1].set_xticks(())\n",
     "ax[1].set_yticks(())\n",
     "ax[1].set_title(\"SVC (support vectors only)\")\n",
