Update Analyzing climate change.ipynb

--- a/Data Analysis/Analyzing climate change.ipynb
+++ b/Data Analysis/Analyzing climate change.ipynb
@@ -783,7 +783,7 @@
     "\n",
     "# Draw a vertical line for mean co2 after '70s\n",
     "plt.axvline(mean_co2_after_70s, 0,data.relative_temp.max(),color=\"black\", alpha=0.70)\n",
-    "plt.text(mean_co2_after_70s,1,'Mean Co2 after 70s')"
+    "plt.text(mean_co2_after_70s,1,'Mean Co2 from 1980')"
    ]
   }
  ],
